# walchensee-oracle

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dashboard  Dockerfile.job  LICENSE  PLAN.md  README.md  TODO.md  cloudbuild.yaml  pyproject.toml
.playwright-mcp/: page-2026-04-19T18-30-29-467Z.yml  page-2026-04-19T18-30-40-312Z.yml
claw/walchi-oracle/: SKILL.md
data/ml/: replay_full.pkl
docs/: 2026-06-12-historical-calibration-findings.md  2026-06-13-corrected-methodology-rework.md  architecture.md  fable_findings.md  future-buoy-signals.md  future-factors.md  historical_forecasts.md  replay-calibration-plan.md  thermal-model.md
docs/findings/: 2026-06-12-historical-baseline.md  aggregator-bar-recalibrated.md  aggregator-bar.md  hgb-coverage-experiment-2026-06-21.md  ignition-timing-2026-06-21.md  li-decouple-2026-06-24.md  ml-classifier-2026-06-13.md  ml-distill-cut1-2026-06-14.md  ml-distill-cut2-2026-06-14.md  ml-distill-cut3-2026-06-14.md  ml-icon-coverage-shadow-2026-06-15.md  ml-research-2026-06-13.md  ml-shadow-classifier-design-2026-06-14.md  ml-work-session-2026-06-14.md  release-notes-draft.md  rule-vs-learned-models-2026-06-24.md  soil-moisture-replay-nulls.md  stats-panel-season-scoping-2026-06-21.md  storm-ground-truth-spike-2026-06-24.md  storm-handling-rule-vs-learned-2026-06-21.md  structural-insolation-veto.md  threshold-boundary-layer-height.md  threshold-cold-lake-delta.md  threshold-daytime-clouds.md  threshold-foehn-trigger.md  threshold-solar-radiation.md  threshold-synoptic-override.md  threshold-upper-level-wind.md  threshold-wet-soil-moisture.md  thunderstorm-forecast-design-2026-06-24.md
docs/publishing/: ml-shadow-classifier-publishing-plan.md  project-story-timeline.md
scripts/: backfill_ml.py  buoy_storm_curve_fetch.py  cost_ratio_sweep.py  dashboard_traffic.py  ensemble_compare.py  export_ml_coeffs.py  export_storm_coeffs.py  heat_feature_validation.py  hgb_coverage_experiment.py  hgb_fair_compare.py  hgb_live_verify.py  icon_coverage_experiment.py  intraday_timing_spike.py  jachenau_night_feature.py  range_feature_prototype.py  storm_ground_truth_spike.py  storm_label_multisignal.py  thunderstorm_model_spike.py  tune_ml.py  validate_ignition_timing.py  webcam_weather_classify.py
src/oracle/: calibration.py  cli.py  config.py  engine.py  hgb_shadow.py  logger.py  ml_classifier.py  replay.py  stats_cache.py  storm_classifier.py  traffic.py  views_cache.py
src/oracle/dashboard/: main.py
src/oracle/knowledge/: ignition_timing.py  ml_coeffs.py  rules.py  storm_coeffs.py
src/oracle/ml/: __init__.py  train.py  (+2 more)
tests/: test_calibration.py  test_chat_fetch.py  test_cli_schedulers.py  test_dashboard.py  test_dashboard_anonymisation.py  test_dashboard_day_sentiment.py  test_engine.py  test_logger.py  test_measurements_fetch.py  test_meteo_fetch.py  test_ml_classifier.py  test_ml_cli.py  test_ml_dataset.py  test_ml_evaluate.py  test_ml_train.py  test_pressure_fetch.py  test_replay_batch.py  test_rules.py  test_storm_classifier.py  test_traffic.py
(+14 files in other folders)
