[project]
name = "walchensee-oracle"
version = "0.1.0"
description = "Thermal wind forecaster for Lake Walchensee (Bavaria)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "google-cloud-storage>=2.18",
    # Visitor-count walk over Cloud Run request logs. In base (not [dashboard])
    # because the forecast job also writes the views cache via `oracle
    # views-update` (see oracle/views_cache.py). Small; the job already pulls
    # google-cloud-storage here.
    "google-cloud-logging>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]
dashboard = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    # google-cloud-logging moved to base deps — the forecast job needs it too
    # (it writes the views cache); the dashboard still gets it transitively.
]
# ML thermal-wind classifier. Optional — not installed by either Dockerfile
# (job runs `pip install .`; dashboard runs `pip install ".[dashboard]"`).
# Phase C of the ml-classifier plan trains on the replay CSV; install locally
# with: uv pip install -e ".[ml]". scikit-learn 1.4+ for HistGradientBoosting
# class_weight + native temperature scaling in CalibratedClassifierCV.
ml = [
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]
# Lean runtime extra for serving the HGB shadow at forecast time in the Cloud
# Run job. scikit-learn (+ scipy/numpy transitively) only — NO pandas/matplotlib,
# which the numpy-only serve path in hgb_shadow.py doesn't need. Keeps the job
# image small (~+45 MB compressed). Dockerfile.job installs ".[hgb]".
hgb = [
    "scikit-learn>=1.4",
    "numpy>=1.24",
]

[project.scripts]
oracle = "oracle.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oracle"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
